Add image to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Welcome</h1>
+    <img src="https://avatars2.githubusercontent.com/u/46979603?v=4" alt="profile-picture">
     Hello there, awesome person!
   </body>
 </html>
