Add lists to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <body>
     <h1>Welcome</h1>
     <img src="https://avatars2.githubusercontent.com/u/46979603?v=4" alt="profile-picture">
-    Hello there, awesome person!
+    <p>Hello there, awesome person!</p>
+    <p>These are my favourite sites: </p>
+    <ul>
+      <li>GitHub</li>
+      <li>CodePen</li>
+      <li>MDN</li>
+    </ul>
   </body>
 </html>
