--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <p>Hello there, awesome person!</p>
     <p>These are my favourite sites: </p>
     <ul>
-      <li>GitHub</li>
-      <li>CodePen</li>
-      <li>MDN</li>
+      <li>My absolute favourite is, of course, <a href="https://github.com">GitHub</a></li>
+      <li>I also spend a lot of time on <a href="https://codepen.io">CodePen</a></li>
+      <li>And <a href="https://developer.mozilla.org">MDN</a> often comes to the rescue</li>
     </ul>
   </body>
 </html>
