--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <body>
     <h1>Welcome</h1>
     <img src="https://avatars2.githubusercontent.com/u/46979603?v=4" alt="profile-picture">
-    <p>Hello there, awesome person!</p>
-    <p>These are my favourite sites: </p>
+    <p>Hello there, welcome to my page!</p>
     <ul>
-      <li>My absolute favourite is, of course, <a href="https://github.com">GitHub</a></li>
+      <li>My absolute favourite site is, of course, <a href="https://github.com">GitHub</a></li>
       <li>I also spend a lot of time on <a href="https://codepen.io">CodePen</a></li>
-      <li>And <a href="https://developer.mozilla.org">MDN</a> often comes to the rescue</li>
+      <li>And <a href="https://developer.mozilla.org">MDN</a> often comes to the rescue to help with my work</li>
     </ul>
   </body>
 </html>
